<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/op1"
        android:icon="@drawable/delivery"
        android:title="@string/pedidos_tramite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/op2"
        android:icon="@drawable/editar"
        android:title="@string/hacer_pedido"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/op3"
        android:icon="@drawable/carrito"
        android:title="@string/listado_compras"
        app:showAsAction="always" />
    <item
        android:id="@+id/op4"
        android:icon="@drawable/slir"
        android:title="@string/salir"
        app:showAsAction="always" />
</menu>