<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F8888"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="295dp"
        android:layout_height="406dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="437dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="437dp"
        android:background="#FAF7F7"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/usuario"
            style="@style/etiquetas_layout_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/usuario" />

        <Space
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/user"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/cuadros"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/password"
            style="@style/etiquetas_layout_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/contraseña" />

        <Space
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/cuadros"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/cliente"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:text="@string/administrador" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/login"
                style="@style/boton"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:onClick="registro"
                android:text="@string/login" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>